classDiagram

    direction LR

    class Primitive {
        <<Abstract>>
    }

    class Points {
        +Size : float
        #DrawLocal(gl : OpenGL) void
    }

    class Lines {
        +Width : float
        #DrawLocal(gl : OpenGL) void
    }

    class Triangles {

    }

    class Quads {

    }

    Primitive <|-- Points
    Primitive <|-- Lines
    Primitive <|-- Triangles
    Primitive <|-- Quads

    style Primitive fill:white